Adding in countdown timer

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
 REACT_APP_SERVER_ID=497565774689468424
 REACT_APP_CHANNEL_ID=506936403964330014
 REACT_APP_SHARD_URL=https://disweb.deploys.io
+REACT_APP_EVENT_DATE=2019-11-09T09:00:00-05:00
