--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "datejs": "^1.0.0-rc3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
