--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-time-line": "^0.2.0",
-    "semantic-ui-react": "^0.88.0"
+    "semantic-ui-react": "^0.88.0",
+    "uuid": "^3.3.3"
   },
   "homepage": "http://hackwitus.github.io/hackwitus-v2",
   "scripts": {
