Lots of r/bugfix

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "semantic-ui-react": "^0.88.0",
     "uuid": "^3.3.3"
   },
+  "homepage": "https://hackwitus.github.io/hackwitus-v2",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
